--- a/env/build_hera_intel.env
+++ b/env/build_hera_intel.env
@@ -6,9 +6,9 @@ module use /contrib/sutils/modulefiles
 module load sutils
 module load cmake/3.16.1
 
-module use /scratch2/NCEPDEV/nwprod/hpc-stack/test/modulefiles/stack
+module use /scratch2/NCEPDEV/nwprod/hpc-stack/libs/hpc-stack/modulefiles/stack
 
-module load hpc/1.0.0-beta1
+module load hpc/1.1.0
 module load hpc-intel/18.0.5.274
 module load hpc-impi/2018.0.4
 module load jasper/2.0.22
@@ -27,7 +27,7 @@ module load nemsio/2.5.2
 module load sp/2.3.3
 module load w3emc/2.7.3
 module load w3nco/2.4.1
-module load upp/10.0.0
+module load upp/10.0.4
 
 module load gfsio/1.4.1
 module load sfcio/1.4.1
