--- a/env/build_aws_intel.env
+++ b/env/build_aws_intel.env
@@ -9,11 +9,11 @@ module load hpc-stack/1.1.0
 export CMAKE_C_COMPILER=mpiicc
 export CMAKE_CXX_COMPILER=mpiicpc
 export CMAKE_Fortran_COMPILER=mpiifort
-export CMAKE_Platform=aws
+export CMAKE_Platform=aws.intel
 export CC=icc
 export CXX=icpc
 export FC=ifort
 
 module load intel/19.0.5.281
 module load impi/2019.0.5
-
+module load upp/10.0.5
