Load rocoto with wflow env.

--- a/env/wflow_aws.env
+++ b/env/wflow_aws.env
@@ -1,3 +1,6 @@
+module use /contrib/apps/modules
+module load rocoto
+
 module use /contrib/apps/miniconda3/modulefiles
 module load miniconda3
 source activate regional_workflow
