--- a/Externals.cfg
+++ b/Externals.cfg
@@ -17,9 +17,10 @@ required = True
 
 [ufs_weather_model]
 protocol = git
-repo_url = https://github.com/NOAA-GSL/ufs-weather-model
+#repo_url = https://github.com/NOAA-GSL/ufs-weather-model
+repo_url = https://github.com/christinaholtNOAA/ufs-weather-model
 # Specify either a branch name or a hash but not both.
-branch = RRFS_cloud
+branch = rrfs_cloud_9mem
 #hash = 63591b6
 local_path = src/ufs_weather_model
 required = True
