--- a/Externals.cfg
+++ b/Externals.cfg
@@ -20,7 +20,7 @@ protocol = git
 #repo_url = https://github.com/NOAA-GSL/ufs-weather-model
 repo_url = https://github.com/christinaholtNOAA/ufs-weather-model
 # Specify either a branch name or a hash but not both.
-branch = rrfs_cloud_9mem
+branch = rrfs_cloud_hwt
 #hash = 63591b6
 local_path = src/ufs_weather_model
 required = True
