--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,8 +1,8 @@
 [regional_workflow]
 protocol = git
-repo_url = https://github.com/NOAA-GSL/regional_workflow
+repo_url = https://github.com/christinaholtNOAA/regional_workflow
 # Specify either a branch name or a hash but not both.
-branch = RRFS_cloud
+branch = add_configs
 local_path = regional_workflow
 required = True
 
