--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,8 +1,8 @@
 [regional_workflow]
 protocol = git
-repo_url = https://github.com/christinaholtNOAA/regional_workflow
+repo_url = https://github.com/NOAA-GSL/regional_workflow
 # Specify either a branch name or a hash but not both.
-branch = add_configs
+branch = RRFS_cloud
 local_path = regional_workflow
 required = True
 
@@ -17,11 +17,9 @@ required = True
 
 [ufs_weather_model]
 protocol = git
-#repo_url = https://github.com/NOAA-GSL/ufs-weather-model
-repo_url = https://github.com/christinaholtNOAA/ufs-weather-model
+repo_url = https://github.com/NOAA-GSL/ufs-weather-model
 # Specify either a branch name or a hash but not both.
-branch = rrfs_cloud_hwt
-#hash = 63591b6
+branch = RRFS_cloud
 local_path = src/ufs_weather_model
 required = True
 
