--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,9 +1,9 @@
 [regional_workflow]
 protocol = git
-repo_url = https://github.com/ufs-community/regional_workflow
+repo_url = https://github.com/christinaholtNOAA/regional_workflow
 # Specify either a branch name or a hash but not both.
-#branch = develop
-hash = d45d2ac
+branch = retry_aws
+#hash = d45d2ac
 local_path = regional_workflow
 required = True
 
