--- a/ush/machine/wcoss2.yaml
+++ b/ush/machine/wcoss2.yaml
@@ -15,6 +15,7 @@ platform:
   RUN_CMD_FCST: mpiexec -n ${PE_MEMBER01} -ppn ${PPN_RUN_FCST} --cpu-bind core -depth ${OMP_NUM_THREADS_RUN_FCST}
   RUN_CMD_POST: mpiexec -n ${nprocs}
   RUN_CMD_PRDGEN: mpiexec -n ${nprocs} --cpu-bind core cfp
+  RUN_CMD_PREPARE_ANALYSIS_INPUT: mpiexec -n ${ncores} -ppn ${ppn}
   RUN_CMD_SERIAL: time
   RUN_CMD_UTILS: mpiexec -n ${nprocs}
   RUN_CMD_NEXUS: mpiexec -n ${nprocs} -ppn ${PPN_NEXUS_EMISSION} --cpu-bind core -depth ${OMP_NUM_THREADS_NEXUS_EMISSION}
