--- a/ush/machine/hera.yaml
+++ b/ush/machine/hera.yaml
@@ -13,6 +13,7 @@ platform:
   QUEUE_FCST: batch
   PARTITION_HPSS: service
   QUEUE_HPSS: batch
+  BATCH_RUN_CMD: srun --export=ALL
   RUN_CMD_FCST: srun --export=ALL
   RUN_CMD_POST: srun --export=ALL
   RUN_CMD_PRDGEN: srun --export=ALL
