--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1982,15 +1982,40 @@ task_run_fcst:
 # POST config parameters
 #-----------------------------
 task_run_post:
-  upp:
+  upp: &det_upp
     execution:
       envcmds:
         - module load {{ user.HOMEdir }}/modulefiles
         - module load build_{{ user.MACHINE }}_{{ workflow.COMPILER }}
       executable: '{{ user.EXECdir }}/upp.x'
       mpicmd: '{{ platform.BATCH_RUN_CMD }}'
+      mpiargs:
+        - --export=ALL
+      threads: 1?
+    files_to_copy:
+      eta_micro_lookup.dat: '{{ workflow.PARMdir }}/upp/nam_micro_lookup.dat'
+      postxconfig-NT.txt: '{{ workflow.PARMdir }}/upp/postxconfig-NT-fv3lam.txt'
+      params_grib2_tbl_new: '{{ workflow.PARMdir }}/upp/params_grib2_tbl_new'
+    namelist:
+      update_values:
+        model_inputs:
+          datestr: "{{ (cycle + leadtime).strftime('%Y-%m-%d_%H:%M:%S') }}"
+          filename: "{{ task_run_fcst.run_dir }}/dynf{{ lead }}.nc"
+          filenameflux: "{{ task_run_fcst.run_dir }}/phyf{{ lead }}.nc"
+          grib: grib2
+          ioform: netcdf
+          modelname: FV3R
+        nampgb:
+          kpo: 47
+          po: [1000.,975.,950.,925.,900.,875.,850.,825.,800.,775.,750.,725.,700.,675.,650.,625.,600.,575.,550.,525.,500.,475.,450.,425.,400.,375.,350.,325.,300.,275.,250.,225.,200.,175.,150.,125.,100.,70.,50.,30.,20.,10.,7.,5.,3.,2.,1.]
 
-    rundir: '{{ workflow.EXPTDIR }}/{{ cycle.strftime(%Y%m%d%H) }}'
+    run_dir: '{{ workflow.EXPTDIR }}/{{ cycle.strftime(%Y%m%d%H) }}/postprd/{{ leadtime }}'
+
+task_run_post_ensemble:
+  upp:
+    <<: *det_upp
+    run_dir: '{{ workflow.EXPTDIR }}/{{ cycle.strftime(%Y%m%d%H) }}/postprd/member{{ "MEM" | env }}/{{ leadtime }}'
+
 #----------------------------
 # RUN PRDGEN config parameters
 #-----------------------------
