--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1992,10 +1992,9 @@ task_run_post:
       mpiargs:
         - --export=ALL
       threads: 1?
-    files_to_copy:
-      eta_micro_lookup.dat: '{{ workflow.PARMdir }}/upp/nam_micro_lookup.dat'
-      postxconfig-NT.txt: '{{ workflow.PARMdir }}/upp/postxconfig-NT-fv3lam.txt'
-      params_grib2_tbl_new: '{{ workflow.PARMdir }}/upp/params_grib2_tbl_new'
+    eta_micro_lookup: '{{ workflow.PARMdir }}/upp/nam_micro_lookup.dat'
+    grib2_tbl: '{{ workflow.PARMdir }}/upp/params_grib2_tbl_new'
+    postxconfig: '{{ workflow.PARMdir }}/upp/postxconfig-NT-fv3lam.txt'
     namelist:
       update_values:
         model_inputs:
@@ -2008,8 +2007,8 @@ task_run_post:
         nampgb:
           kpo: 47
           po: [1000.,975.,950.,925.,900.,875.,850.,825.,800.,775.,750.,725.,700.,675.,650.,625.,600.,575.,550.,525.,500.,475.,450.,425.,400.,375.,350.,325.,300.,275.,250.,225.,200.,175.,150.,125.,100.,70.,50.,30.,20.,10.,7.,5.,3.,2.,1.]
-
     run_dir: '{{ workflow.EXPTDIR }}/{{ cycle.strftime(%Y%m%d%H) }}/postprd/{{ leadtime }}'
+  desired_output_name: '{{ nco.NET_default }}{{ cycle.strftime(%Y%m%d%H) }}.{{ fid }}.f{{ leadtime }}.{{ workflow.PREDEF_GRID_NAME }}.grib2'
 
 task_run_post_ensemble:
   upp:
