--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -2008,7 +2008,13 @@ task_run_post:
           kpo: 47
           po: [1000.,975.,950.,925.,900.,875.,850.,825.,800.,775.,750.,725.,700.,675.,650.,625.,600.,575.,550.,525.,500.,475.,450.,425.,400.,375.,350.,325.,300.,275.,250.,225.,200.,175.,150.,125.,100.,70.,50.,30.,20.,10.,7.,5.,3.,2.,1.]
     run_dir: '{{ workflow.EXPTDIR }}/{{ cycle.strftime(%Y%m%d%H) }}/postprd/{{ leadtime }}'
+  platform:
+    account: '{{ user.ACCOUNT }}'
+    scheduler: '{{ platform.SCHED }}'
   desired_output_name: '{{ nco.NET_default }}{{ cycle.strftime(%Y%m%d%H) }}.{{ fid }}.f{{ leadtime }}.{{ workflow.PREDEF_GRID_NAME }}.grib2'
+  output_file_labels:
+    - prslev
+    - natlev
 
 task_run_post_ensemble:
   upp:
