--- a/tests/WE2E/test_configs/custom_grids/config.custom_ESGgrid_Central_Asia_3km.yaml
+++ b/tests/WE2E/test_configs/custom_grids/config.custom_ESGgrid_Central_Asia_3km.yaml
@@ -48,7 +48,7 @@ task_run_fcst:
   WRTCMP_dx: '{{ task_make_grid.ESGgrid_DELX }}'
   WRTCMP_dy: '{{ task_make_grid.ESGgrid_DELY }}'
 task_run_post:
-  POST_OUTPUT_DOMAIN_NAME: custom_ESGgrid_central_asia
+  post_output_domain_name: custom_ESGgrid_central_asia
 rocoto:
   tasks:
     metatask_run_ensemble:
