--- a/tests/WE2E/test_configs/custom_grids/config.custom_GFDLgrid__GFDLgrid_USE_NUM_CELLS_IN_FILENAMES_eq_FALSE.yaml
+++ b/tests/WE2E/test_configs/custom_grids/config.custom_GFDLgrid__GFDLgrid_USE_NUM_CELLS_IN_FILENAMES_eq_FALSE.yaml
@@ -52,4 +52,4 @@ task_run_fcst:
   WRTCMP_dlon: 0.24
   WRTCMP_dlat: 0.24
 task_run_post:
-  POST_OUTPUT_DOMAIN_NAME: custom_GFDLgrid
+  post_output_domain_name: custom_GFDLgrid
