--- a/ush/config_defaults.yaml
+++ b/ush/config_defaults.yaml
@@ -1681,6 +1681,8 @@ task_make_lbcs:
 # IO_LAYOUT_Y FORECAST config parameters
 #-----------------------------
 task_run_fcst:
+  # UW Placeholder additions
+  rundir: '{{ workflow.EXPTDIR }}/{{ timevars.yyyymmddhh }}'
   #------------------------------------------------------------------------
   #
   # NNODES_RUN_FCST: 
@@ -1985,38 +1987,45 @@ task_run_post:
       batchargs:
         nodes: 1
         tasks_per_node: 24
+        threads: 1
+        walltime: 00:15:00
       envcmds:
         - module load {{ user.HOMEdir }}/modulefiles
-        - module load build_{{ user.MACHINE }}_{{ workflow.COMPILER }}
+        - module load build_{{ user.MACHINE|lower }}_{{ workflow.COMPILER }}
       executable: '{{ user.EXECdir }}/upp.x'
       mpicmd: '{{ platform.BATCH_RUN_CMD }}'
-      mpiargs:
-        - --export=ALL
-      threads: 1?
-    eta_micro_lookup: '{{ user.PARMdir }}/upp/nam_micro_lookup.dat'
-    grib2_tbl: '{{ user.PARMdir }}/upp/params_grib2_tbl_new'
-    postxconfig: '{{ user.PARMdir }}/upp/postxconfig-NT-fv3lam.txt'
+      threads: 1
+    files_to_copy:
+      eta_micro_lookup.dat: '{{ user.PARMdir }}/upp/nam_micro_lookup.dat'
+      params_grib2_tbl_new: '{{ user.PARMdir }}/upp/params_grib2_tbl_new'
+      postxconfig-NT.txt: '{{ user.UFS_WTHR_MDL_DIR }}/tests/parm/postxconfig-NT-fv3lam.txt'
     namelist:
       update_values:
         model_inputs:
-          datestr: "{{ (cycle + leadtime).strftime('%Y-%m-%d_%H:%M:%S') }}"
-          filename: "{{ task_run_fcst.rundir }}/dynf{{ leadtime }}.nc"
-          filenameflux: "{{ task_run_fcst.rundir }}/phyf{{ leadtime }}.nc"
+          datestr: "{{ timevars.valid_time }}"
+          filename: '{{ task_run_fcst.rundir }}/dynf{{ timevars.fff }}.nc'
+          filenameflux: '{{ task_run_fcst.rundir }}/phyf{{ timevars.fff }}.nc'
           grib: grib2
           ioform: netcdf
           modelname: FV3R
         nampgb:
           kpo: 47
           po: [1000.,975.,950.,925.,900.,875.,850.,825.,800.,775.,750.,725.,700.,675.,650.,625.,600.,575.,550.,525.,500.,475.,450.,425.,400.,375.,350.,325.,300.,275.,250.,225.,200.,175.,150.,125.,100.,70.,50.,30.,20.,10.,7.,5.,3.,2.,1.]
-    rundir: '{{ workflow.EXPTDIR }}/{{ cycle.strftime(%Y%m%d%H) }}/postprd/{{ leadtime }}'
+    rundir: '{{ task_run_fcst.rundir }}/postprd/{{ timevars.fff }}'
   platform:
     account: '{{ user.ACCOUNT }}'
     scheduler: '{{ platform.SCHED }}'
   post_output_domain_name: '{{ workflow.PREDEF_GRID_NAME }}'
-  desired_output_name: '{{ nco.NET_default }}{{ cycle.strftime(%Y%m%d%H) }}.{{ file_label }}.f{{ leadtime }}.{{ task_run_post.post_output_domain_name }}.grib2'
+  desired_output_name: '{{ nco.NET_default }}.{{ timevars.yyyymmddhh }}.{{ file_label }}.f{{ timevars.fff }}.{{ task_run_post.post_output_domain_name }}.grib2'
   output_file_labels:
     - prslev
     - natlev
+
+timevars:
+  yyyymmddhh: '{{ cycle.strftime("%Y%m%d%H") }}'
+  valid_time: "{{ (cycle + leadtime).strftime('%Y-%m-%d_%H:%M:%S') }}"
+  fff: '{{ "%03d" % (leadtime.total_seconds() // 3600) }}'
+
 
 #----------------------------
 # RUN PRDGEN config parameters
